--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -1,5 +1,5 @@
-<div class="row-fluid" ng-controller="SalesAnalysisController" ng-init="init()">
-    <div class="row-fluid">
+<div class="row" ng-controller="SalesAnalysisController" ng-init="init()">
+    <div class="row" style="padding-left: 20px; padding-right: 20px">
         <div class="box">
             <div class="box-header">
                 <h2>
@@ -9,8 +9,8 @@
                 </h2>
             </div>
             <div class="box-content">
-                <div class="row-fluid">
-                    <div class="span3" style="text-align: left">
+                <div class="row">
+                    <div class="col-lg-3" style="text-align: left">
                         <div class="btn-group">
                             <button ng-click="lvlMove('e20dccdf039b3874')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
                                 <i ng-class="views[3].icon"></i> 商户
@@ -23,37 +23,43 @@
                             </button>
                         </div>
                     </div>
-                    <div class="span6" style="text-align: center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-success" ng-model="periodModel"
-                                    btn-radio="'lastWeek'" >
-                                前7天
-                            </button>
-                            <button type="button" class="btn btn-success" ng-model="periodModel"
-                                    btn-radio="'lastMonth'">
-                                前30天
-                            </button>
-                            <button type="button" class="btn btn-success" ng-model="periodModel"
-                                    btn-radio="'custom'" onclick="$('#dateRange').click();">
-                                <i class="icon-calendar"></i>
-                            </button>
+                    <div class="col-lg-6 row" style="text-align: center">
+                        <div class="col-lg-6" style="text-align: right; margin-right: -30px">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success" ng-model="periodModel"
+                                        btn-radio="'lastWeek'">
+                                    前7天
+                                </button>
+                                <button type="button" class="btn btn-success" ng-model="periodModel"
+                                        btn-radio="'lastMonth'">
+                                    前30天
+                                </button>
+                                <button type="button" class="btn btn-success" ng-model="periodModel"
+                                        btn-radio="'custom'" onclick="$('#dateRange').click();">
+                                    <span class="fa fa-calendar"></span>
+                                </button>
+                            </div>
                         </div>
-                        <input format="YYYY年MM月DD日" style="width: 222px;height: 25px; background-color: floralwhite" id="dateRange" type="daterange"
-                               ng-model="dateRange" disabled="true">
+                        <div class="col-lg-6" style="text-align: left">
+                            <input class="form-control" format="YYYY年MM月DD日"
+                                   style="width: 252px;height: 32px; background-color: floralwhite" id="dateRange"
+                                   type="daterange"
+                                   ng-model="dateRange" disabled="true">
+                        </div>
                     </div>
-                    <div class="span3" style="text-align: right">
-                        <div class="row-fluid">
-                            <div class="span6">
-                                <select ng-show="analysisModel == 'shop'" style="width: 150px; height: 30px"
+                    <div class="col-lg-3" style="text-align: right">
+                        <div class="row">
+                            <div class="col-lg-6" style="text-align: right">
+                                <select class="form-control" ng-show="analysisModel == 'shop'" style="width: 130px; "
                                         ng-model="currentShop"
                                         ng-options="currentShop.name for currentShop in currentShops|orderBy:columnSort.sortColumn:columnSort.reverse">
                                 </select>
-                                <select ng-show="analysisModel == 'employee'" style="width: 150px; height: 30px"
+                                <select ng-show="analysisModel == 'employee'" style="width: 130px;"
                                         ng-model="currentEmployee"
                                         ng-options="currentEmployee.name for currentEmployee in currentEmployees|orderBy:columnSort.sortColumn:columnSort.reverse">
                                 </select>
                             </div>
-                            <div class="span6">
+                            <div class="col-lg-6">
                                 <button ng-show="analysisModel == 'merchant'" type="button" class="btn btn-primary"
                                         ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true"
                                         btn-checkbox-false="false">
@@ -68,8 +74,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row-fluid">
-                    <div class="span4" style="text-align: right" ng-show="dualChart">
+                <div class="row">
+                    <div class="col-lg-4" style="text-align: right" ng-show="dualChart">
                         <div google-chart="" chart="offChart" style="{{offChart.cssStyle}}"
                              on-ready="chartReady()"></div>
                     </div>
@@ -97,14 +103,14 @@
                 </fieldset>
                 <hr>
                 <div style="width: 100%" ng-show="(shopsDiv == true)">
-                    <table style="margin-bottom: -5px" class="table table-striped table-bordered bootstrap-datatable datatable">
+                    <table class="table table-striped table-bordered bootstrap-datatable datatable">
                         <thead style="background-color: #dcdcdc">
                         <th style="width: 16%" ng-repeat="header in headers">
                             <a href="" ng-click="columnSort.sortColumn=headers[$index];columnSort.reverse=!columnSort.reverse">{{ headersZ[$index] }}</a>
                         </th>
                         </thead>
                     </table>
-                    <div style="display: block; height: 200px; overflow-y: auto">
+                    <div style="display: block; height: 200px; overflow-y: auto; margin-top: -12px">
                     <table class="table table-striped table-bordered bootstrap-datatable datatable">
                         <tbody >
                         <tr ng-repeat="tbRow in tbRows|orderBy:columnSort.sortColumn:columnSort.reverse">
