--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -20,7 +20,7 @@
 </div>
 <div class="box-content">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-lg-3">
             <div class="row">
                 <div class="col-lg-8">
                     <select class="form-control" ng-model="pagination.iLength" ng-options="option for option in pagination.iLengthOptions"></select>
@@ -30,11 +30,21 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-3">
+            <div class="row" ng-if="showOptions" >
+                <div class="col-lg-8">
+                    <select class="form-control" ng-model="currentShowShop.shop" ng-options="option as option.name for option in allShop">
+                        <option value="">-- 选择商店 --</option>
+                    </select>
+                </div>
+                <div class="col-lg-4">
+                    <h4>切换商店</h4>
+                </div>
+            </div>
 
         </div>
-        <div class="col-lg-4"></div>
-        <div class="col-lg-4">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3">
             <form class="form-search" >
                 <div class="input-group">
                     <input class="form-control" type="search" ng-model="search.text" tooltip="{{searchOptions.tooltip}}" tooltip-trigger="focus">
