--- a/app/views/header.html
+++ b/app/views/header.html
@@ -22,6 +22,7 @@
 					<ul class="dropdown-menu">
 						<li class="dropdown-menu-title">我的设置</li>
 						<li><a ng-click="showMeProfile()"><i class="fa fa-user"></i> 个人资料 </a></li>
+                        <li><a ng-click="showUserSettingDialog()"><i class="fa fa-cog"></i> 用户设定</a></li>
 						<li><a ng-click="showChangePasswordDialog()"><i class="fa fa-cog"></i> 修改密码</a></li>
 						<li><a ng-click="signout()"><i class="fa fa-off"></i> 登出 </a></li>
 					</ul>
@@ -98,3 +99,26 @@
     </div>
 </script>
 <!-- End: Setting UserProfile -->
+<script type="text/ng-template" id="userSettingDialog.html">
+    <div class="modal-header btn-primary">
+
+        <div class="row ">
+            <div class="col-xs-12" style="text-align: center"><h1>用户设定</h1></div>
+        </div>
+    </div>
+    <div class="modal-body">
+        <form role="form" >
+            <div class="form-group col-lg-6" ng-repeat="field in profileFields" >
+                <label ng-if="field.required" ng-hide="field.hide">{{field.title}}*</label>
+                <label ng-if="!field.required" ng-hide="field.hide">{{field.title}}</label>
+                <input ng-hide="field.hide" type="{{field.type}}" ng-model="me[field.name]" class="form-control" required="true">
+            </div>
+            <alert type="alert.type" ng-hide="!alert" close="closeAlert()">{{alert.msg}}</alert>
+        </form>
+        <br>
+        <p style="padding-left: 15px">* 标注为必填项 </p>
+    </div>
+    <div class="modal-footer" style="text-align: center">
+        <button class="btn btn-primary" style="width: 20%" ng-click="userSettingSave()">保存</button>
+    </div>
+</script>
