--- a/app/views/analysis/dailyReport/dayBillReportAnalysis.html
+++ b/app/views/analysis/dailyReport/dayBillReportAnalysis.html
@@ -46,13 +46,13 @@
                                             <div class="chart white" style="height: 40px;">
                                                 <div class="row">
                                                     <div class="col-lg-3">
-                                                        <span class="label label-primary" style="font-size: 15px;">销售总额:</span>
+                                                        <span class="label label-primary" style="font-size: 15px;">销售额:</span>
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="sales.total"></span>
                                                     </div>
                                                     <div class="col-lg-3">
-                                                        <span class="label label-primary" style="font-size: 15px;">销售总数:</span>
+                                                        <span class="label label-primary" style="font-size: 15px;">销售数:</span>
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="sales.count"></span>
@@ -60,13 +60,13 @@
                                                 </div>
                                                 <div class="row" style="margin-top: 10px;">
                                                     <div class="col-lg-3">
-                                                        <span class="label label-primary" style="font-size: 15px;">退货总额:</span>
+                                                        <span class="label label-primary" style="font-size: 15px;">退单额:</span>
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="returns.total"></span>
                                                     </div>
                                                     <div class="col-lg-3">
-                                                        <span class="label label-primary" style="font-size: 15px;">退货总数:</span>
+                                                        <span class="label label-primary" style="font-size: 15px;">退单数:</span>
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="returns.count"></span>
@@ -129,72 +129,57 @@
                     </div>
                     <div class="col-lg-1"></div>
                 </div>
-                <hr/>
-                <h1 style="text-align: center; margin-top: 20px;"></h1>
             </div>
-
-            <div class="row">
-
-                <div class="col-lg-12">
-
-                    <div class="box chat chat-full noOverflow">
-
-                        <div class="box-header">
-                            <h2>当日交易详情</h2>
-                        </div>
-                        <div class="box-content">
-                            <div class="row">
-                                <div class="col-lg-1"></div>
-                                <div class="col-lg-10">
-                                    <div class="row" style="height: 430px;">
-                                        <div style="">
-                                            <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
-                                                <thead>
-                                                <tr>
-                                                    <th ng-repeat="field in fields">
-                                                        {{field.title}}
-                                                    </th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr class="tr" style="" ng-repeat="entity in entities">
-                                                    <td class="center" ng-repeat="field in fields">
-                                <span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity)}}
-                                </span>
-                                <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}
-                                </span>
-                                                    </td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
-                                        </div>
-                                        <div class="col-lg-12 center">
-                                            <style>
-                                                div.col-lg-12 ul > li {
-                                                    cursor: pointer;
-                                                }
-                                            </style>
-                                            <pagination total-items="pagination.iTotal" items-per-page="pagination.iLength"
-                                                        page="pagination.iPage"
-                                                        max-size="pagination.maxSize" rotate="false" previous-text="上一页"
-                                                        next-text="下一页"></pagination>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-1"></div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div><!--/col-->
-
-            </div>
+        </div>
+        <div class="box">
+          <div class="box-header">
+              <h2>当日交易详情</h2>
+          </div>
+          <div class="box-content">
+              <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1">
+                      <div class="row" style="height: 430px;">
+                          <div style="">
+                              <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
+                                  <thead>
+                                  <tr>
+                                      <th ng-repeat="field in fields">
+                                          {{field.title}}
+                                      </th>
+                                  </tr>
+                                  </thead>
+                                  <tbody>
+                                  <tr class="tr" style="" ng-repeat="entity in entities">
+                                      <td class="center" ng-repeat="field in fields">
+                  <span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity)}}
+                  </span>
+                  <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}
+                  </span>
+                                      </td>
+                                  </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-lg-12">
+                              显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
+                          </div>
+                          <div class="col-lg-12 center">
+                              <style>
+                                  div.col-lg-12 ul > li {
+                                      cursor: pointer;
+                                  }
+                              </style>
+                              <pagination total-items="pagination.iTotal" items-per-page="pagination.iLength"
+                                          page="pagination.iPage"
+                                          max-size="pagination.maxSize" rotate="false" previous-text="上一页"
+                                          next-text="下一页"></pagination>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
         </div>
     </div>
 </div>
